--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,8 @@
 <body>
 <h1> Vice Versa </h1>
 
-<form action="/action_page.py">
-    <textarea id = "message" name="message" rows="20" cols="40" style="border: 6px solid blue; ">
+<form action="{% url 'reverse' %}">
+    <textarea name="message" rows="20" cols="40" style="border: 6px solid blue; ">
 
     </textarea>
     <br><br>
