Add words count feature

--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,7 @@
     <title>Reverse</title>
 </head>
 <body>
-<h1> Original text </h1>
+<h1> Original text has {{ counter_word }} words </h1>
 {{ message }}
 <h1> Reversed text </h1>
 {{ reversed_text }}
